--- a/src/app/components/photogrpahy/photoexamples.component.html
+++ b/src/app/components/photogrpahy/photoexamples.component.html
@@ -14,6 +14,13 @@
           <a href="/assets/images/portfolio/tintin_lionel-1.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/yoshi-1.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/yoshi-1.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/alfie.jpg" class="img-res" alt="">
@@ -36,6 +43,13 @@
           <a href="https://arf.ab.ca/animal/5507m-thumper/" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/daisy-1.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/daisy-1.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["rest"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/hummingbird-1.JPG" class="img-res" alt="">
@@ -47,7 +61,14 @@
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/glyndwr-1.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
-          <a href="/assets/images/portfolio/lionel-6.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+          <a href="/assets/images/portfolio/glyndwr-1.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/boo-1.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/boo-1.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
@@ -55,6 +76,13 @@
           <img src="/assets/images/portfolio/blue-1.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/blue-1.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/daisy-2.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/daisy-2.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["rest"]'>
@@ -69,6 +97,20 @@
           <img src="/assets/images/portfolio/sahara-1.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/sahara-1.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/boo-2.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/boo-2.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/birdo-1.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/birdo-1.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
@@ -94,6 +136,13 @@
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
+          <img src="/assets/images/portfolio/birdo-2.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/birdo-2.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
           <img src="/assets/images/portfolio/lionel-6.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/lionel-6.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
@@ -111,6 +160,27 @@
           <img src="/assets/images/portfolio/twigg-1.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/twigg-1.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/daisy-3.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/daisy-3.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/boo-3.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/boo-3.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/yoshi-2.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/yoshi-2.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
@@ -156,6 +226,13 @@
           <a href="https://arf.ab.ca/animal/5507m-thumper/" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/birdo-3.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/birdo-3.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/alfie-4.jpg" class="img-res" alt="">
@@ -172,9 +249,23 @@
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
+          <img src="/assets/images/portfolio/boo-4.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/boo-4.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
           <img src="/assets/images/portfolio/glyndwr-2.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
-          <a href="/kammryndancy/src/assets/images/portfolio/glyndwr-2.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+          <a href="/assets/images/portfolio/glyndwr-2.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/daisy-4.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/daisy-4.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
@@ -207,9 +298,23 @@
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
+          <img src="/assets/images/portfolio/birdo-4.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/birdo-4.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
           <img src="/assets/images/portfolio/lionel-3.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/lionel-3.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/boo-5.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/boo-5.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
@@ -224,6 +329,13 @@
           <img src="/assets/images/portfolio/katashi-2.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/katashi-2.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/yoshi-3.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/yoshi-3.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["rest"]'>
@@ -254,6 +366,13 @@
           <a href="/assets/images/portfolio/sahara-3.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats", "dogs"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/birdo-5.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/birdo-5.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
         <div class="portfolio-item">
           <img src="/assets/images/portfolio/alfie-9.jpg" class="img-res" alt="">
@@ -270,6 +389,20 @@
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
         <div class="portfolio-item">
+          <img src="/assets/images/portfolio/soleil-3.jpg" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/soleil-3.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/daisy-5.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/daisy-5.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
           <img src="/assets/images/portfolio/tintin_lionel-2.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/tintin_lionel-2.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
@@ -280,6 +413,13 @@
           <img src="/assets/images/portfolio/glyndwr-3.jpg" class="img-res" alt="">
           <h4 class="portfolio-item-title">View Image</h4>
           <a href="/assets/images/portfolio/glyndwr-3.jpg" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/boo-6.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/boo-6.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["dogs"]'>
@@ -303,6 +443,13 @@
           <p class="portfolio-item-title">My Name's Thumper</p>
 <!--          <a href="/assets/images/portfolio/thumper-3.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>-->
           <a href="https://arf.ab.ca/animal/5507m-thumper/" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
+        <div class="portfolio-item">
+          <img src="/assets/images/portfolio/birdo-6.JPG" class="img-res" alt="">
+          <h4 class="portfolio-item-title">View Image</h4>
+          <a href="/assets/images/portfolio/birdo-6.JPG" target="_blank"><i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
       </div>
       <div class="col-lg-3 col-md-4 col-xs-6" data-groups='["cats"]'>
